Refactored the main logic. Fixed some issues

--- a/Projects/BowlingScore_POC/CMakeLists.txt
+++ b/Projects/BowlingScore_POC/CMakeLists.txt
@@ -9,12 +9,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lncurses")
 
+include_directories("/usr/lib/x86_64-linux-gnu")
 include_directories(interface)
 include_directories(hdr)
 
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(Bowling ${SOURCES})
+target_link_libraries(Bowling curses)
 
 #add_subdirectory (tests)
 #enable_testing ()
